# geojson-validator

./: .gitignore  CHANGELOG.md  Makefile  README.md  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
geojson_validate/: geom.py  invalid.py  main.py  problematic.py  validation.py
geojson_validator/: __init__.py  checks_invalid.py  checks_problematic.py  fix_utils.py  fixes.py  fixes_invalid.py  fixes_problematic.py  fixes_utils.py  geometry_utils.py  geometry_validation.py  main.py  schema_validation.py  validation.py  validation_utils.py
geojson_validator/data/: geojson-schema.json
geojsonfix/: __init__.py  check_invalid.py  check_problematic.py  checks_invalid.py  checks_problematic.py  fix_invalid.py  fixes_invalid.py  fixes_problematic.py  geometry_utils.py  invalid.py  main.py  problematic.py  utils.py
geojsonvalidate/: checks_invalid.py  checks_problematic.py  main.py
streamlit-geojson_validator/: app.py
streamlit-geojsonfix/: app.py  requirements.txt
streamlit-geojsonfix/app/: app.py
streamlit-webapp/: app.py  requirements.txt
tests/: context.py  fixtures.py  fixtures_utils.py  test_checks_invalid.py  test_checks_problematic.py  test_fixes.py  test_fixes_invalid.py  test_fixes_utils.py  test_geometry_utils.py  test_geometry_validation.py  test_invalid.py  test_main.py  test_main_otherdata.py  test_problematic.py  test_schema_validation.py  test_utils.py  test_validation_utils.py  tests_main_datasets.py
tests/data/invalid_schema/: 1_geometry_missing_type.geojson  (+9 more)
tests/scripts/: redownload_testfiles.py
(+4 files in other folders)
